Changed /texts/search and /texts/batch API endpoints to use POST request instead of GET.
Also changed format of year_range passed to search action: instead of Array of two elements [from_year, to_year] we use json object { from: from_year, to: to_year }
